--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/danieiff/vtecx-doc.git"
+    "url": "git+https://github.com/danieiff/learn.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/danieiff/vtecx-doc/issues"
+    "url": "https://github.com/danieiff/learn/issues"
   },
   "homepage": "https://github.com/danieiff/vtecx-doc#readme"
 }
